--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,14 +7,25 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-button (click)="scheduleNotification()" expand="block">
+    Schedule1
+  </ion-button>
+  <ion-button (click)="recurringNotification()" expand="block">
+    Every Minute
+  </ion-button>
+  <ion-button (click)="repeatingDaily()" expand="block">
+    Daily
+  </ion-button>
+  <ion-button (click)="getAll()" expand="block">
+    Get All
+  </ion-button>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-list>
+    <ion-item *ngFor="let n of scheduled">
+      <ion-label text-wrap>
+        {{ n.id }} - {{ n.title }}
+        <p>Trigger : {{ n.trigger | json }}</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
