--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,31 +1,10 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      HOME
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-button (click)="scheduleNotification()" expand="block">
-    Schedule1
-  </ion-button>
-  <ion-button (click)="recurringNotification()" expand="block">
-    Every Minute
-  </ion-button>
-  <ion-button (click)="repeatingDaily()" expand="block">
-    Daily
-  </ion-button>
-  <ion-button (click)="getAll()" expand="block">
-    Get All
-  </ion-button>
-
-  <ion-list>
-    <ion-item *ngFor="let n of scheduled">
-      <ion-label text-wrap>
-        {{ n.id }} - {{ n.title }}
-        <p>Trigger : {{ n.trigger | json }}</p>
-      </ion-label>
-    </ion-item>
-  </ion-list>
 </ion-content>
