노티피케이션 README.md 정리

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,10 +1,11 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      HOME
+      HOME1
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-button expand="block" (click)="clickNoti()">Localnoti</ion-button>
 </ion-content>
